--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         Arise(`rock`,`paper`,`scissors`)
         updato(`rock`);
         updat1o()
-        "><img class="asas" src="./Assists/paper-emoji.png" alt="Rock"></button>
+        "><img class="asas" src="./Assists/rock-emoji.png" alt="Rock"></button>
 
             <button onclick="
         randommove();
